# cpp-scheme

./: .gitignore  CMakeLists.txt  README.txt
src/: main.cpp
src/environment/: Environment.cpp  Environment.h  Frame.cpp  Frame.h
src/erors/: ExceedClosingBracketException.cpp  ExceedClosingBracketException.h  ExceptionsLogger.cpp  ExceptionsLogger.h
src/evaluation/: Evaluator.cpp  Evaluator.h  ListSupport.cpp  ListSupport.h  Mapper.cpp  Mapper.h  SumOperation.cpp  SumOperation.h
src/evaluation/operations/: LambdaEvaluation.cpp  LambdaEvaluation.h
src/lisp_structures/: LispCell.cpp  LispCell.h  LispList.cpp  LispList.h  LispNull.cpp  LispNull.h  LispNumber.cpp  LispNumber.h  LispObject.cpp  LispObject.h  LispObjectRef.cpp  LispObjectRef.h  LispOperation.cpp  LispOperation.h  LispString.cpp  LispString.h  LispSymbol.cpp  LispSymbol.h  StructuresVisitor.cpp  StructuresVisitor.h
src/lisp_structures/special/: LispList.cpp  LispList.h
src/machine/: ByteCode.cpp  ByteCode.h  CodePrinter.cpp  CodePrinter.h  EvalObject.cpp  EvalObject.h  EvalProcedure.cpp  EvalProcedure.h  EvalsCollector.cpp  EvalsCollector.h  OpcodeObject.cpp  OpcodeObject.h  StackFrame.cpp  StackFrame.h  TreeCompiler.cpp  TreeCompiler.h  VarTable.cpp  VarTable.h  VirtualMachine.cpp  VirtualMachine.h
src/painters/: InlinePainter.cpp  InlinePainter.h  StringMapper.cpp  StringMapper.h  StringPainter.cpp  StringPainter.h  StructurePainter.cpp  StructurePainter.h  TreePainter.cpp  TreePainter.h
src/parsing/: AbstractNode.cpp  AbstractNode.h  Atom.cpp  Atom.h  CloseBracketParsingState.cpp  CloseBracketParsingState.h  DefaultParsingState.cpp  DefaultParsingState.h  ElementsList.cpp  ElementsList.h  EofState.h  IntegerParsingState.cpp  IntegerParsingState.h  LexemsLogger.cpp  LexemsLogger.h  LexicalParser.cpp  LexicalParser.h  LispList.cpp  LispList.h  LispString.h  Observer.cpp  Observer.h  OpenBracketParsingState.cpp  OpenBracketParsingState.h  ParsedTreeLogger.cpp  ParsedTreeLogger.h  Parser.cpp  Parser.h  ParsingControl.cpp  ParsingControl.h  ParsingInfo.cpp  ParsingInfo.h  ParsingState.h  Symbol.cpp  Symbol.h  SymbolicTable.cpp  SymbolicTable.h  SyntaxParser.cpp  SyntaxParser.h  SyntaxTree.cpp  (+7 more)
src/parsing/rules/: ExceptSymbolsParsingRule.cpp  ExceptSymbolsParsingRule.h  OrParsingRule.cpp  OrParsingRule.h  ParsingRule.cpp  ParsingRule.h  RuleRepeatingParsingRule.cpp  RuleRepeatingParsingRule.h  SequentialParsingRule.cpp  SequentialParsingRule.h  SpanParsingRule.cpp  SpanParsingRule.h  StringEqParsingRule.cpp  StringEqParsingRule.h
src/parsing/states/: LeftBracketParser.cpp  LeftBracketParser.h  NumberParser.cpp  NumberParser.h  Parser.cpp  Parser.h  RightBracketParser.cpp  RightBracketParser.h  StringParser.cpp  StringParser.h
src/parsing/text_handling/: TextPointer.cpp  TextPointer.h
src/semantic_parsing/: SemanticLogger.cpp  SemanticLogger.h  SemanticParser.cpp  SemanticParser.h  Syntax2SemanticSubscriber.cpp  Syntax2SemanticSubscriber.h  SyntaxTree2LispObjectMapper.cpp  SyntaxTree2LispObjectMapper.h
src/semantic_parsing/semantic_objects/: BoundVariable.cpp  BoundVariable.h  DefineProcedure.cpp  DefineProcedure.h  DefineSymbol.cpp  DefineSymbol.h  Expression.cpp  Expression.h  FnParameter.cpp  FnParameter.h  If.cpp  If.h  Let.cpp  Let.h  LetS.cpp  LetS.h  Number.cpp  Number.h  Procedure.cpp  Procedure.h  Quote.cpp  Quote.h  SemanticObject.cpp  SemanticObject.h  String.cpp  String.h
src/semantic_parsing/wlakers/: SemanticWalker.cpp  SemanticWalker.h  SymbolsCollector.cpp  SymbolsCollector.h  TailRecursionReplacer.cpp  TailRecursionReplacer.h
src/terminal/: Terminal.cpp  Terminal.h
src/tokens/: Atom.cpp  Atom.h  CloseBracket.h  Number.cpp  Number.h  OpenBracket.h  TokensInfo.h  Word.h
