cmake_minimum_required(VERSION 3.23)
project(cpp_scheme)

set(CMAKE_CXX_STANDARD 17)
add_executable(cpp_scheme
        ./src/main.cpp
        src/parsing/LexicalParser.cpp
        src/parsing/LexicalParser.h
        src/parsing/Token.cpp
        src/parsing/Token.h
        src/parsing/SyntaxParser.cpp
        src/parsing/SyntaxParser.h
        src/painters/TreePainter.cpp
        src/painters/TreePainter.h
        src/lisp_structures/LispObject.cpp
        src/lisp_structures/LispObject.h
        src/lisp_structures/LispSymbol.cpp
        src/lisp_structures/LispSymbol.h
        src/lisp_structures/LispNumber.cpp
        src/lisp_structures/LispNumber.h
        src/lisp_structures/LispString.cpp
        src/lisp_structures/LispString.h
        src/lisp_structures/LispCell.cpp
        src/lisp_structures/LispCell.h
        src/lisp_structures/LispNull.cpp
        src/lisp_structures/LispNull.h
        src/environment/Frame.cpp
        src/environment/Frame.h
        src/evaluation/Evaluator.cpp
        src/evaluation/Evaluator.h
        src/environment/Environment.cpp
        src/environment/Environment.h
        src/evaluation/SumOperation.cpp
        src/evaluation/SumOperation.h
        src/lisp_structures/LispOperation.cpp
        src/lisp_structures/LispOperation.h
        src/evaluation/Mapper.cpp
        src/evaluation/Mapper.h
        src/lisp_structures/LispObjectRef.cpp
        src/lisp_structures/LispObjectRef.h
        src/painters/StringMapper.cpp
        src/painters/StringMapper.h
        src/painters/StructurePainter.cpp
        src/painters/StructurePainter.h
        src/evaluation/ListSupport.cpp
        src/evaluation/ListSupport.h
        src/evaluation/operations/LambdaEvaluation.cpp
        src/evaluation/operations/LambdaEvaluation.h
        src/terminal/Terminal.cpp
        src/terminal/Terminal.h
        src/parsing/Observer.cpp
        src/parsing/Observer.h
        src/parsing/LexemsLogger.cpp
        src/parsing/LexemsLogger.h
        src/erors/ExceedClosingBracketException.cpp
        src/erors/ExceedClosingBracketException.h
        src/erors/ExceptionsLogger.cpp
        src/erors/ExceptionsLogger.h
        src/parsing/ParsedTreeLogger.cpp
        src/parsing/ParsedTreeLogger.h
        src/lisp_structures/LispList.cpp
        src/lisp_structures/LispList.h src/parsing/SymbolicTable.cpp src/parsing/SymbolicTable.h)