cmake_minimum_required(VERSION 3.23)
project(cpp_scheme)

set(CMAKE_CXX_STANDARD 17)
add_executable(cpp_scheme
        ./src/main.cpp
        src/parsing/LexicalParser.cpp
        src/parsing/LexicalParser.h
        src/parsing/Token.cpp
        src/parsing/Token.h
        src/parsing/SyntaxParser.cpp
        src/parsing/SyntaxParser.h
        src/painters/TreePainter.cpp
        src/painters/TreePainter.h
        src/lisp_structures/LispObject.cpp
        src/lisp_structures/LispObject.h
        src/lisp_structures/LispSymbol.cpp
        src/lisp_structures/LispSymbol.h
        src/lisp_structures/LispNumber.cpp
        src/lisp_structures/LispNumber.h
        src/lisp_structures/LispString.cpp
        src/lisp_structures/LispString.h
        src/lisp_structures/LispCell.cpp
        src/lisp_structures/LispCell.h
        src/lisp_structures/LispNull.cpp
        src/lisp_structures/LispNull.h
        src/environment/Frame.cpp
        src/environment/Frame.h
        src/environment/Environment.cpp
        src/environment/Environment.h
        src/lisp_structures/LispOperation.cpp
        src/lisp_structures/LispOperation.h
        src/lisp_structures/LispObjectRef.cpp
        src/lisp_structures/LispObjectRef.h
        src/painters/StringMapper.cpp
        src/painters/StringMapper.h
        src/painters/StructurePainter.cpp
        src/painters/StructurePainter.h
        src/terminal/Terminal.cpp
        src/terminal/Terminal.h
        src/parsing/Observer.cpp
        src/parsing/Observer.h
        src/parsing/LexemsLogger.cpp
        src/parsing/LexemsLogger.h
        src/erors/ExceedClosingBracketException.cpp
        src/erors/ExceedClosingBracketException.h
        src/erors/ExceptionsLogger.cpp
        src/erors/ExceptionsLogger.h
        src/parsing/ParsedTreeLogger.cpp
        src/parsing/ParsedTreeLogger.h
        src/lisp_structures/special/LispList.cpp
        src/lisp_structures/special/LispList.h
        src/parsing/SymbolicTable.cpp
        src/parsing/SymbolicTable.h
        src/parsing/SyntaxTree.cpp
        src/parsing/SyntaxTree.h
        src/semantic_parsing/semantic_objects/Quote.cpp
        src/semantic_parsing/semantic_objects/Quote.h
        src/semantic_parsing/semantic_objects/LetS.cpp
        src/semantic_parsing/semantic_objects/LetS.h
        src/semantic_parsing/semantic_objects/DefineSymbol.cpp
        src/semantic_parsing/semantic_objects/DefineSymbol.h
        src/semantic_parsing/semantic_objects/Procedure.cpp
        src/semantic_parsing/semantic_objects/Procedure.h
        src/semantic_parsing/semantic_objects/If.cpp
        src/semantic_parsing/semantic_objects/If.h
        src/semantic_parsing/semantic_objects/Let.cpp
        src/semantic_parsing/semantic_objects/Let.h
        src/semantic_parsing/SemanticParser.cpp
        src/semantic_parsing/SemanticParser.h
        src/semantic_parsing/semantic_objects/SemanticObject.cpp
        src/semantic_parsing/semantic_objects/SemanticObject.h
        src/semantic_parsing/semantic_objects/Expression.cpp
        src/semantic_parsing/semantic_objects/Expression.h
        src/semantic_parsing/semantic_objects/DefineProcedure.cpp
        src/semantic_parsing/semantic_objects/DefineProcedure.h
        src/semantic_parsing/Syntax2SemanticSubscriber.cpp
        src/semantic_parsing/Syntax2SemanticSubscriber.h
        src/semantic_parsing/SemanticLogger.cpp
        src/semantic_parsing/SemanticLogger.h
        src/semantic_parsing/semantic_objects/Number.cpp
        src/semantic_parsing/semantic_objects/Number.h
        src/semantic_parsing/semantic_objects/String.cpp
        src/semantic_parsing/semantic_objects/String.h
        src/semantic_parsing/semantic_objects/BoundVariable.cpp
        src/semantic_parsing/semantic_objects/BoundVariable.h
        src/semantic_parsing/semantic_objects/FnParameter.cpp
        src/semantic_parsing/semantic_objects/FnParameter.h src/semantic_parsing/SyntaxTree2LispObjectMapper.cpp src/semantic_parsing/SyntaxTree2LispObjectMapper.h src/painters/InlinePainter.cpp src/painters/InlinePainter.h src/machine/VirtualMachine.cpp src/machine/VirtualMachine.h src/machine/StackFrame.cpp src/machine/StackFrame.h src/machine/ByteCode.cpp src/machine/ByteCode.h src/machine/CodePrinter.cpp src/machine/CodePrinter.h src/machine/OpcodeObject.cpp src/machine/OpcodeObject.h)